ui.frontend/src/main/webpack/etisalat/styles/core-components/button/action-button.scss
/* Download map button start */

.action-button {
  @media (min-width: $screen-lg-max) {
    .cmp-button {
      float: left;
      margin-left: toRem(15);
      min-width: toRem(180);
      padding: 0 0.5rem;
      width: auto;
    }
  }

  .cmp-button {
    border: toRem(1) solid $darkest-night;
    border-radius: toRem(4);
    cursor: pointer;
    margin-left: toRem(15);
    outline: 0;
    padding: toRem(15) 0.5rem;
    text-align: center;

    @include respond-to-max($tablet) {
      line-height: toRem(48);
      width: 100%;
    }
  }

  .cmp-button:hover {
    border: toRem(1) solid $main-green;
  }

  a {
    color: $almost-black;
  }

  .cmp-button__text {
    color: $almost-black;
    font-size: $font14;
    font-weight: 700;
    letter-spacing: 0.1429em;
    text-transform: uppercase;
    transition: all 0.3s ease-in-out;
  }

  .cmp-button__text:hover {
    color: $main-green;
  }
}

.action-button .cmp-button:active {
  background-color: $main-green;
  border: 1px solid $main-green;
  color: $white;
}

@include respond-to-max($tablet) {
  .action-button {
    .aem-Grid.aem-Grid--default--12 > .aem-GridColumn.aem-GridColumn--default--12 {
      width: 100%;
    }

    a {
      display: inline-block;
    }

    .cmp-button {
      margin-left: 0;
      padding: 0 toRem(8);
    }
  }
}

/* Download map button end */

