fixed review comment, fixed bugfix/etsl-411 alignment issue on mobile

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/button/action-button.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/button/action-button.scss
@@ -37,8 +37,8 @@
   .cmp-button__text {
     color: $almost-black;
     font-size: $font14;
-    font-weight: 700;
-    letter-spacing: 0.1429em;
+    font-weight: get-font-weight("bold");
+    letter-spacing: toRem(2);
     text-transform: uppercase;
     transition: all 0.3s ease-in-out;
   }
